# machine-info-rs

./: Cargo.toml  README.md
src/: camera.rs  lib.rs  machine.rs  main.rs  model.rs  monitor.rs
