[package]
name = "machine-info"
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"
description = "CPU, GPU and memory monitor. Use it to track resources usage"
readme = "README.md"
repository = "https://github.com/wixet-limited/machine-info-rs"
homepage = "https://wixet.com"

categories = ["system", "monitoring"]
keywords = ["monitor", "nvidia", "gpu", "cpu", "memory"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sysinfo = {version = "0.26.1", default-features = false} # Disable multithread
nvml-wrapper = "0.7.0"
anyhow = "1.0"
log = "0.4"
