[package]
name = "machine-info"
version = "1.0.9"
edition = "2021"
license-file = "LICENSE"
description = "CPU, GPU and memory monitor. Use it to track resources usage"
readme = "README.md"
repository = "https://github.com/wixet-limited/machine-info-rs"
homepage = "https://wixet.com"

categories = ["os"]
keywords = ["monitor", "nvidia", "gpu", "cpu", "memory"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sysinfo = {version = "0.26.4", default-features = false} # Disable multithread
nvml-wrapper = "0.8.0"
anyhow = "1.0"
log = "0.4"
v4l = { version = "0.13.0", optional = true}


[features]
v4l = ["dep:v4l"]